qt6/gen_qtextobject.h

class QMetaObject;
typedef QTextBlock::iterator QTextBlock__iterator;
class QTextBlockGroup;
class QTextCursor;
class QTextDocument;
class QTextFormat;
class QTextFrame;
typedef QTextFrame::iterator QTextFrame__iterator;
class QTextFrameFormat;
class QTextFrameLayoutData;
class QTextObject;
typedef struct QMetaObject QMetaObject;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlock__iterator QTextBlock__iterator;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFragment QTextFragment;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextFrameLayoutData QTextFrameLayoutData;
typedef struct QTextObject QTextObject;
struct miqt_array /* of QGlyphRun* */  QTextFragment_glyphRuns2(const QTextFragment* self, int from, int length);
void QTextFragment_delete(QTextFragment* self);
QTextFrame__iterator* QTextFrame__iterator_new();
QTextFrame__iterator* QTextFrame__iterator_new2(QTextFrame__iterator* param1);
QTextFrame* QTextFrame__iterator_parentFrame(const QTextFrame__iterator* self);
QTextFrame* QTextFrame__iterator_currentFrame(const QTextFrame__iterator* self);
QTextBlock* QTextFrame__iterator_currentBlock(const QTextFrame__iterator* self);
bool QTextFrame__iterator_atEnd(const QTextFrame__iterator* self);
bool QTextFrame__iterator_operatorEqual(const QTextFrame__iterator* self, QTextFrame__iterator* o);
bool QTextFrame__iterator_operatorNotEqual(const QTextFrame__iterator* self, QTextFrame__iterator* o);
QTextFrame__iterator* QTextFrame__iterator_operatorPlusPlus(QTextFrame__iterator* self);
QTextFrame__iterator* QTextFrame__iterator_operatorPlusPlusWithInt(QTextFrame__iterator* self, int param1);
QTextFrame__iterator* QTextFrame__iterator_operatorMinusMinus(QTextFrame__iterator* self);
QTextFrame__iterator* QTextFrame__iterator_operatorMinusMinusWithInt(QTextFrame__iterator* self, int param1);
void QTextFrame__iterator_delete(QTextFrame__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_new();
QTextBlock__iterator* QTextBlock__iterator_new2(QTextBlock__iterator* param1);
QTextFragment* QTextBlock__iterator_fragment(const QTextBlock__iterator* self);
bool QTextBlock__iterator_atEnd(const QTextBlock__iterator* self);
bool QTextBlock__iterator_operatorEqual(const QTextBlock__iterator* self, QTextBlock__iterator* o);
bool QTextBlock__iterator_operatorNotEqual(const QTextBlock__iterator* self, QTextBlock__iterator* o);
QTextBlock__iterator* QTextBlock__iterator_operatorPlusPlus(QTextBlock__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_operatorPlusPlusWithInt(QTextBlock__iterator* self, int param1);
QTextBlock__iterator* QTextBlock__iterator_operatorMinusMinus(QTextBlock__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_operatorMinusMinusWithInt(QTextBlock__iterator* self, int param1);
void QTextBlock__iterator_delete(QTextBlock__iterator* self);