qt6/gen_qtextobject.nim

proc fcQTextFragment_glyphRuns2(self: pointer, fromVal: cint, length: cint): struct_miqt_array {.importc: "QTextFragment_glyphRuns2".}
proc fcQTextFragment_delete(self: pointer) {.importc: "QTextFragment_delete".}
proc fcQTextFrameiterator_new(): ptr cQTextFrameiterator {.importc: "QTextFrame__iterator_new".}
proc fcQTextFrameiterator_new2(param1: pointer): ptr cQTextFrameiterator {.importc: "QTextFrame__iterator_new2".}
proc fcQTextFrameiterator_parentFrame(self: pointer, ): pointer {.importc: "QTextFrame__iterator_parentFrame".}
proc fcQTextFrameiterator_currentFrame(self: pointer, ): pointer {.importc: "QTextFrame__iterator_currentFrame".}
proc fcQTextFrameiterator_currentBlock(self: pointer, ): pointer {.importc: "QTextFrame__iterator_currentBlock".}
proc fcQTextFrameiterator_atEnd(self: pointer, ): bool {.importc: "QTextFrame__iterator_atEnd".}
proc fcQTextFrameiterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextFrame__iterator_operatorEqual".}
proc fcQTextFrameiterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextFrame__iterator_operatorNotEqual".}
proc fcQTextFrameiterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QTextFrame__iterator_operatorPlusPlus".}
proc fcQTextFrameiterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextFrame__iterator_operatorPlusPlusWithInt".}
proc fcQTextFrameiterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QTextFrame__iterator_operatorMinusMinus".}
proc fcQTextFrameiterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextFrame__iterator_operatorMinusMinusWithInt".}
proc fcQTextFrameiterator_delete(self: pointer) {.importc: "QTextFrame__iterator_delete".}
proc fcQTextBlockiterator_new(): ptr cQTextBlockiterator {.importc: "QTextBlock__iterator_new".}
proc fcQTextBlockiterator_new2(param1: pointer): ptr cQTextBlockiterator {.importc: "QTextBlock__iterator_new2".}
proc fcQTextBlockiterator_fragment(self: pointer, ): pointer {.importc: "QTextBlock__iterator_fragment".}
proc fcQTextBlockiterator_atEnd(self: pointer, ): bool {.importc: "QTextBlock__iterator_atEnd".}
proc fcQTextBlockiterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock__iterator_operatorEqual".}
proc fcQTextBlockiterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock__iterator_operatorNotEqual".}
proc fcQTextBlockiterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QTextBlock__iterator_operatorPlusPlus".}
proc fcQTextBlockiterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextBlock__iterator_operatorPlusPlusWithInt".}
proc fcQTextBlockiterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QTextBlock__iterator_operatorMinusMinus".}
proc fcQTextBlockiterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextBlock__iterator_operatorMinusMinusWithInt".}
proc fcQTextBlockiterator_delete(self: pointer) {.importc: "QTextBlock__iterator_delete".}


func init*(T: type QTextObject, h: ptr cQTextObject): QTextObject =
  T(h: h)
proc metaObject*(self: QTextObject, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTextObject_metaObject(self.h))

proc metacast*(self: QTextObject, param1: cstring): pointer =

  fcQTextObject_metacast(self.h, param1)

proc metacall*(self: QTextObject, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTextObject_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTextObject, s: cstring): string =

  let v_ms = fcQTextObject_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc format*(self: QTextObject, ): gen_qtextformat.QTextFormat =

  gen_qtextformat.QTextFormat(h: fcQTextObject_format(self.h))

proc formatIndex*(self: QTextObject, ): cint =

  fcQTextObject_formatIndex(self.h)

proc document*(self: QTextObject, ): gen_qtextdocument.QTextDocument =

  gen_qtextdocument.QTextDocument(h: fcQTextObject_document(self.h))

proc objectIndex*(self: QTextObject, ): cint =

  fcQTextObject_objectIndex(self.h)

proc tr2*(_: type QTextObject, s: cstring, c: cstring): string =

  let v_ms = fcQTextObject_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QTextObject, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQTextObject_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc staticMetaObject*(_: type QTextObject): gen_qobjectdefs.QMetaObject =
  gen_qobjectdefs.QMetaObject(h: fcQTextObject_staticMetaObject())

func init*(T: type QTextBlockGroup, h: ptr cQTextBlockGroup): QTextBlockGroup =
  T(h: h)
proc metaObject*(self: QTextBlockGroup, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTextBlockGroup_metaObject(self.h))

proc metacast*(self: QTextBlockGroup, param1: cstring): pointer =

  fcQTextBlockGroup_metacast(self.h, param1)

proc metacall*(self: QTextBlockGroup, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTextBlockGroup_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTextBlockGroup, s: cstring): string =

  let v_ms = fcQTextBlockGroup_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr2*(_: type QTextBlockGroup, s: cstring, c: cstring): string =

  let v_ms = fcQTextBlockGroup_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QTextBlockGroup, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQTextBlockGroup_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc staticMetaObject*(_: type QTextBlockGroup): gen_qobjectdefs.QMetaObject =
  gen_qobjectdefs.QMetaObject(h: fcQTextBlockGroup_staticMetaObject())

func init*(T: type QTextFrameLayoutData, h: ptr cQTextFrameLayoutData): QTextFrameLayoutData =
  T(h: h)
proc operatorAssign*(self: QTextFrameLayoutData, param1: QTextFrameLayoutData): void =

  fcQTextFrameLayoutData_operatorAssign(self.h, param1.h)

proc delete*(self: QTextFrameLayoutData) =
  fcQTextFrameLayoutData_delete(self.h)

func init*(T: type QTextFrame, h: ptr cQTextFrame): QTextFrame =
  T(h: h)
proc create*(T: type QTextFrame, doc: gen_qtextdocument.QTextDocument): QTextFrame =

  QTextFrame.init(fcQTextFrame_new(doc.h))
proc metaObject*(self: QTextFrame, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTextFrame_metaObject(self.h))

proc metacast*(self: QTextFrame, param1: cstring): pointer =

  fcQTextFrame_metacast(self.h, param1)

proc metacall*(self: QTextFrame, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTextFrame_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTextFrame, s: cstring): string =

  let v_ms = fcQTextFrame_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setFrameFormat*(self: QTextFrame, format: gen_qtextformat.QTextFrameFormat): void =

  fcQTextFrame_setFrameFormat(self.h, format.h)

proc frameFormat*(self: QTextFrame, ): gen_qtextformat.QTextFrameFormat =

  gen_qtextformat.QTextFrameFormat(h: fcQTextFrame_frameFormat(self.h))

proc firstCursorPosition*(self: QTextFrame, ): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQTextFrame_firstCursorPosition(self.h))

proc lastCursorPosition*(self: QTextFrame, ): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQTextFrame_lastCursorPosition(self.h))

proc firstPosition*(self: QTextFrame, ): cint =

  fcQTextFrame_firstPosition(self.h)

proc lastPosition*(self: QTextFrame, ): cint =

  fcQTextFrame_lastPosition(self.h)

proc layoutData*(self: QTextFrame, ): QTextFrameLayoutData =

  QTextFrameLayoutData(h: fcQTextFrame_layoutData(self.h))

proc setLayoutData*(self: QTextFrame, data: QTextFrameLayoutData): void =

  fcQTextFrame_setLayoutData(self.h, data.h)

proc childFrames*(self: QTextFrame, ): seq[QTextFrame] =

  var v_ma = fcQTextFrame_childFrames(self.h)
  var vx_ret = newSeq[QTextFrame](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = QTextFrame(h: v_outCast[i])
  vx_ret

proc parentFrame*(self: QTextFrame, ): QTextFrame =

  QTextFrame(h: fcQTextFrame_parentFrame(self.h))

proc begin*(self: QTextFrame, ): QTextFrameiterator =

  QTextFrameiterator(h: fcQTextFrame_begin(self.h))

proc endX*(self: QTextFrame, ): QTextFrameiterator =

  QTextFrameiterator(h: fcQTextFrame_endX(self.h))

proc tr2*(_: type QTextFrame, s: cstring, c: cstring): string =

  let v_ms = fcQTextFrame_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QTextFrame, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQTextFrame_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metaObject(self: QTextFrame, ): gen_qobjectdefs.QMetaObject =


  gen_qobjectdefs.QMetaObject(h: fQTextFrame_virtualbase_metaObject(self.h))

type QTextFramemetaObjectBase* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: QTextFrame, slot: proc(super: QTextFramemetaObjectBase): gen_qobjectdefs.QMetaObject) =
  # TODO check subclass
  type Cb = proc(super: QTextFramemetaObjectBase): gen_qobjectdefs.QMetaObject
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQTextFrame_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QTextFrame_metaObject(self: ptr cQTextFrame, slot: int): pointer {.exportc: "miqt_exec_callback_QTextFrame_metaObject ".} =
  type Cb = proc(super: QTextFramemetaObjectBase): gen_qobjectdefs.QMetaObject
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(): auto =
    callVirtualBase_metaObject(QTextFrame(h: self), )

  let virtualReturn = nimfunc[](superCall )

  virtualReturn.h
proc callVirtualBase_metacast(self: QTextFrame, param1: cstring): pointer =


  fQTextFrame_virtualbase_metacast(self.h, param1)

type QTextFramemetacastBase* = proc(param1: cstring): pointer
proc onmetacast*(self: QTextFrame, slot: proc(super: QTextFramemetacastBase, param1: cstring): pointer) =
  # TODO check subclass
  type Cb = proc(super: QTextFramemetacastBase, param1: cstring): pointer
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQTextFrame_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QTextFrame_metacast(self: ptr cQTextFrame, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QTextFrame_metacast ".} =
  type Cb = proc(super: QTextFramemetacastBase, param1: cstring): pointer
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: cstring): auto =
    callVirtualBase_metacast(QTextFrame(h: self), param1)
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
proc callVirtualBase_metacall(self: QTextFrame, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQTextFrame_virtualbase_metacall(self.h, cint(param1), param2, param3)
